[package]
name = "embassy-dht-sensor"
version = "0.1.0"
edition = "2021"
authors = ["Mark Berner"]
license = "MIT OR Apache-2.0"
description = "DHT sensor driver for the Embassy async runtime"

[features]
default = ["rp2040", "dht2X"]
rp2040 = ["dep:embassy-rp"]
examples = ["dep:defmt", "dep:defmt-rtt", "dep:panic-probe"]
dht1X = []
dht2X = []

[[example]]
name = "read-dht-sensor-rp"
path = "examples/read-dht-sensor-rp.rs"
required-features = ["rp2040", "examples"]

[lib]
name = "embassy_dht_sensor"
path = "src/lib.rs"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "task-arena-size-32768"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
critical-section = { version = "1.1.2" }

embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"], optional = true }
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
